src/test/deca/context/invalid/class/41_absent_method.deca
// Description:
//    Appel d'une méthode inexistante
//
// Resultats:
//    undefined method
// 
// Historique:
//    cree le 01/01/2016

class A {

}

{
	A a;
	a.a();
}

